# clas12-cmag

./: README.md  meson.build
docs/: MagFieldC.tex
includes/: magfield.h  magfielddraw.h  magfieldutil.h  maggrid.h  mapcolor.h
src/: Makefile  magfield.c  magfielddraw.c  magfieldio.c  magfieldutil.c  maggrid.c  main.c  mapcolor.c  testdata.c
